[gd_scene load_steps=10 format=3 uid="uid://buthxbc6me2ox"]

[ext_resource type="Theme" uid="uid://ch6l5082r6sr4" path="res://Theme/MyTheme.theme" id="1_arqed"]
[ext_resource type="Script" uid="uid://cqa5cmvhlufp3" path="res://Scripts/CourseShell.gd" id="1_vjnhd"]
[ext_resource type="PackedScene" uid="uid://bnujd3tsoxwh" path="res://Scenes/Slide_01.tscn" id="2_4clcw"]
[ext_resource type="PackedScene" uid="uid://bvdr6xdh3ytyc" path="res://Scenes/Slide_02.tscn" id="3_vlwof"]
[ext_resource type="PackedScene" uid="uid://dk07gsike5l1l" path="res://Scenes/Slide_03.tscn" id="4_arqed"]
[ext_resource type="PackedScene" uid="uid://bvolo58fnxx5d" path="res://Scenes/Slide_05.tscn" id="5_wjt1c"]
[ext_resource type="PackedScene" uid="uid://c08xi6lkikxcq" path="res://Scenes/Slide_06.tscn" id="6_4clcw"]
[ext_resource type="Script" uid="uid://bob6uudja37oh" path="res://Scripts/HeaderUI.gd" id="7_vlwof"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arqed"]

[node name="CourseShell" type="Control" groups=["CourseShell"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_arqed")
script = ExtResource("1_vjnhd")
slides = Array[PackedScene]([ExtResource("2_4clcw"), ExtResource("3_vlwof"), ExtResource("4_arqed"), ExtResource("5_wjt1c"), ExtResource("6_4clcw")])
titles_preview = Array[String](["Introduction", "Course Objectives", "Why is Preventing Falls from Ladders Important?", "How do you prevent falls from ladders?", "Common Ladder Hazards"])

[node name="SlideHost" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -126.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_vlwof")

[node name="BottomPanel" type="Panel" parent="HeaderUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HeaderUI/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel5" type="Panel" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_arqed")

[node name="SlideMenu" type="MenuButton" parent="HeaderUI/BottomPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.25
text = "Menu"
flat = false
text_overrun_behavior = 3

[node name="Panel3" type="Panel" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_arqed")

[node name="SlideProgressBar" type="ProgressBar" parent="HeaderUI/BottomPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
show_percentage = false

[node name="Panel2" type="Panel" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_arqed")

[node name="Play_Pause" type="Button" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4

[node name="Replay" type="Button" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_arqed")

[node name="PreviousButton" type="Button" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
size_flags_stretch_ratio = 0.25
text = "Prev"

[node name="NextButton" type="Button" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
size_flags_stretch_ratio = 0.25
text = "Next"

[node name="Panel4" type="Panel" parent="HeaderUI/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_arqed")

[connection signal="pressed" from="HeaderUI/BottomPanel/HBoxContainer/PreviousButton" to="." method="go_prev"]
[connection signal="pressed" from="HeaderUI/BottomPanel/HBoxContainer/NextButton" to="." method="go_next"]
